--- a/employee-register/src/app/app.component.html
+++ b/employee-register/src/app/app.component.html
@@ -7,25 +7,50 @@
     </ion-header>
     <ion-content>
       <ion-list>
-        <ion-item button routerLink="/home" routerDirection="root">
+        <ion-item button (click)="navigateAndCloseMenu('/home')">
           <ion-icon name="home-outline" slot="start"></ion-icon>
           <ion-label>Home</ion-label>
         </ion-item>
-        <ion-item button routerLink="/configuration">
-          <ion-icon name="settings-outline" slot="start"></ion-icon>
-          <ion-label>Configuration</ion-label>
-        </ion-item>
-        <ion-item button routerLink="/device-details">
-          <ion-icon name="phone-portrait-outline" slot="start"></ion-icon>
-          <ion-label>Device Details</ion-label>
-        </ion-item>
-        <ion-item button routerLink="/time-tracker">
+
+        <!-- Time Tracker Main Item -->
+        <ion-item button (click)="navigateAndCloseMenu('/time-tracker')">
           <ion-icon name="time-outline" slot="start"></ion-icon>
           <ion-label>Time Tracker</ion-label>
         </ion-item>
-        <ion-item button routerLink="/reports">
+
+        <!-- Time Tracker Sub-items -->
+        <ion-item button (click)="navigateAndCloseMenu('/time-tracker')" class="submenu-item">
+          <ion-icon name="person-add-outline" slot="start"></ion-icon>
+          <ion-label>Register Employee</ion-label>
+        </ion-item>
+        <ion-item button (click)="navigateAndCloseMenu('/time-tracker')" class="submenu-item">
+          <ion-icon name="finger-print-outline" slot="start"></ion-icon>
+          <ion-label>Clock In/Out</ion-label>
+        </ion-item>
+
+        <!-- Reports Main Item -->
+        <ion-item button (click)="navigateAndCloseMenu('/reports')">
           <ion-icon name="bar-chart-outline" slot="start"></ion-icon>
           <ion-label>Reports</ion-label>
+        </ion-item>
+
+        <!-- Reports Sub-items -->
+        <ion-item button (click)="navigateAndCloseMenu('/reports')" class="submenu-item">
+          <ion-icon name="document-text-outline" slot="start"></ion-icon>
+          <ion-label>Time Reports</ion-label>
+        </ion-item>
+        <ion-item button (click)="navigateAndCloseMenu('/reports')" class="submenu-item">
+          <ion-icon name="analytics-outline" slot="start"></ion-icon>
+          <ion-label>Analytics</ion-label>
+        </ion-item>
+
+        <ion-item button (click)="navigateAndCloseMenu('/configuration')">
+          <ion-icon name="settings-outline" slot="start"></ion-icon>
+          <ion-label>Configuration</ion-label>
+        </ion-item>
+        <ion-item button (click)="navigateAndCloseMenu('/device-details')">
+          <ion-icon name="phone-portrait-outline" slot="start"></ion-icon>
+          <ion-label>Device Details</ion-label>
         </ion-item>
         <ion-item button (click)="logout()">
           <ion-icon name="log-out-outline" slot="start"></ion-icon>
