--- a/employee-register/src/app/app.component.html
+++ b/employee-register/src/app/app.component.html
@@ -19,11 +19,11 @@
         </ion-item>
 
         <!-- Time Tracker Sub-items -->
-        <ion-item button (click)="navigateAndCloseMenu('/time-tracker')" class="submenu-item">
+        <ion-item button (click)="navigateWithViewAndCloseMenu('/time-tracker', 'register')" class="submenu-item">
           <ion-icon name="person-add-outline" slot="start"></ion-icon>
           <ion-label>Register Employee</ion-label>
         </ion-item>
-        <ion-item button (click)="navigateAndCloseMenu('/time-tracker')" class="submenu-item">
+        <ion-item button (click)="navigateWithViewAndCloseMenu('/time-tracker', 'checkin')" class="submenu-item">
           <ion-icon name="finger-print-outline" slot="start"></ion-icon>
           <ion-label>Clock In/Out</ion-label>
         </ion-item>
